--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
-remote_theme: daviddarnes/alembic@main
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
-- jekyll-remote-theme 
+- jekyll-remote-theme
 
-title: A.R.M.O.R #site copyright appearing on footer
+title: A.R.M.O.R # also site copyright appearing on footer
 description: A comprehensive security measure image classification API that classifies (for now) 22 different types of common military armaments around the world posing threat to civilians on land.
 
 author:
