--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,6 @@
-theme: slate
+remote_theme: daviddarnes/alembic@main
+plugins:
+- jekyll-remote-theme 
 
 title: A.R.M.O.R # also site copyright appearing on footer
 description: A comprehensive security measure image classification API that classifies (for now) 22 different types of common military armaments around the world posing threat to civilians on land.
