--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
-remote_theme: pages-themes/merlot@main #pages-themes/slate@main
+remote_theme: daviddarnes/alembic@main #pages-themes/merlot@main #pages-themes/slate@main #remote_theme: owner/name
 #plugins:
 #- jekyll-remote-theme 
+
 
 title: A.R.M.O.R # also site copyright appearing on footer
 description: A comprehensive security measure image classification API that classifies (for now) 22 different types of common military armaments around the world posing threat to civilians on land.
