--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 plugins:
-- jekyll-remote-theme 
-remote_theme: pages-themes/merlot #pages-themes/merlot@main #pages-themes/slate@main #remote_theme: owner/name
-
+- jekyll-remote-theme
+#remote_theme: owner/name
+remote_theme: pages-themes/merlot #daviddarnes/alembic@main #pages-themes/merlot #pages-themes/slate@main 
 #You don't need to specify the branch name (@main) or the zip file extension. 
 #GitHub Pages will automatically fetch the latest version of the theme from the default branch.
 
