--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,6 +5,10 @@ remote_theme: pages-themes/slate #daviddarnes/alembic@main
 #You don't need to specify the branch name (@main) or the zip file extension. 
 #GitHub Pages will automatically fetch the latest version of the theme from the default branch.
 
+# to do: slate fontsize
+#options:
+# merlot logo
+
 title: A.R.M.O.R # also site copyright appearing on footer
 description: A comprehensive security measure image classification API that classifies (for now) 22 different types of common military armaments around the world posing threat to civilians on land.
 
