--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ remote_theme: pages-themes/slate #daviddarnes/alembic@main
 #options:
 # merlot logo
 
-title: A.R.M.O.R # also site copyright appearing on footer
+title: A.R.M.O.R - Armament Models Recognizer # also site copyright appearing on footer
 description: A comprehensive security measure image classification API that classifies (for now) 22 different types of common military armaments around the world posing threat to civilians on land.
 
 author:
